# iterm-to-warp

./: Kali Linux.itermcolors  README.md  iterm_to_warp.py  kali_linux.yaml  pyproject.toml
